<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Entry not saved because the amount is empty.</string>
    <string name="category">category</string>
    <string name="body_2">subcategory</string>
    <string name="cash">Mode</string>
    <string name="value">amount</string>
    <string name="noteline">note</string>
    <string name="edit_text_new_word">Enter a new word</string>
    <string name="all_data">All data</string>
    <string name="this_month">this month</string>
    <string name="today">today</string>
    <string name="thisyear">2019</string>
    <string name="enter_expenses">Enter Expenses</string>
    <string name="view_graphs">View Graphs</string>


    <string-array name="category">
        <item>Maintenance</item>
        <item>School</item>
        <item>Food</item>
        <item>Travel</item>
        <item>Car</item>
        <item>Holidays</item>
        <item>Utilities</item>
        <item>Prithu</item>

    </string-array>

    <string-array name="subcategory">
        <item>Princeton</item>
        <item>Escape</item>
        <item>Carlton</item>
        <item>Prithu</item>
        <item>Phone</item>
        <item>Electricity</item>
    </string-array>

    <string-array name="mode">
        <item>Cash</item>
        <item>Card</item>
        <item>Bank</item>
        <item>Cheque</item>
        <item>Paytm</item>
        <item>Kotak</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>


</resources>
